--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-mysql/
-mysql/ib_buffer_pool
-mysql/ib_logfile0
-mysql/ibdata1
-mysql/eleicao/apuracao.MYI
-mysql/eleicao/candidato.MYD
-mysql/eleicao/candidato.MYI
-mysql/eleicao/eleitores.ibd
-mysql/eleicao/opcoes.MYD
-mysql/eleicao/opcoes.MYI
-mysql/eleicao/sessao.ibd
-mysql/eleicao/urnas.ibd
-mysql/eleicao/votos.ibd
-mysql/eleicao/votou.ibd
-mysql/mysql/innodb_index_stats.ibd
-mysql/mysql/innodb_table_stats.ibd
+mysql/*
+
